crates/carta/tests/snapshots/golden_writer__revealjs__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<table>
<thead>
<tr>
<th>col1</th>
<th>col2 </th>
<th>col3</th>
</tr>
</thead>
<tbody>
<tr>
<td> a </td>
<td>spaced text </td>
<td>trailing </td>
</tr>
</tbody>
</table>
</section>
