crates/carta/tests/snapshots/golden_writer__revealjs__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<table>
<thead>
<tr>
<th>signs</th>
<th>selector</th>
<th>joined</th>
<th>narrow</th>
<th>mark</th>
</tr>
</thead>
<tbody>
<tr>
<td>⌚⭐✅</td>
<td>☀️1️⃣</td>
<td>👨‍👩‍👧👍🏽</td>
<td>㉈゙</td>
<td>́abc</td>
</tr>
</tbody>
</table>
</section>
